--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16"
   }
 }
